--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     RECEIVING
   </div>
   <div class="header nodisplay">
-    JADOO v1 BY <a href="http://Developerrahul.com">Developer Rahul</a>
+   JADOO v1 BY CODEMON
   </div>
 
 <div class="sea sea-left nodisplay">
